--- a/style.css
+++ b/style.css
@@ -91,6 +91,8 @@ h1 {
   font-size: 44px;
   line-height: 1.1;
   letter-spacing: -1px;
+  text-shadow: 0px 20px 30px  rgba(0, 0, 0, 0.226);
+
 }
 
 .header-text {
@@ -109,7 +111,6 @@ img {
   width: 32px;
   height: 32px;
   margin-bottom: 16px;
-   
 }
 
 .features-title {
@@ -148,6 +149,9 @@ img {
 /* CHAIRS */
 .chair-box {
   padding: 24px;
+}
+.chair {
+  box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.226);
 }
 
 h3 {
