--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 
 header,
 section {
-  margin-bottom: 48px;
+  margin-bottom: 96px;
 }
 
 h2 {
@@ -57,6 +57,7 @@ h2 {
 
   font-weight: 500;
   display: inline-block;
+  border-radius: 100px;
 }
 .btn:hover,
 .btn:active {
@@ -70,6 +71,9 @@ h2 {
   font-size: 14px;
   padding: 8px 12px;
 }
+img {
+  border-radius: 12px;
+}
 /* ------------------------ */
 /* COMPONENT STYLES */
 /* ------------------------ */
@@ -79,7 +83,7 @@ header {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 80px;
-  margin-top: 48px;
+  margin-top: 64px;
 }
 
 .header-text-box {
@@ -87,7 +91,7 @@ header {
 }
 
 h1 {
-  margin-bottom: 24px;
+  margin-bottom: 32px;
   font-size: 44px;
   line-height: 1.1;
   letter-spacing: -1px;
@@ -110,7 +114,7 @@ img {
   stroke: #087f5b;
   width: 32px;
   height: 32px;
-  margin-bottom: 16px;
+  margin-bottom:24px;
 }
 
 .features-title {
@@ -127,6 +131,7 @@ img {
   background-color: #087f5b;
   color: white;
   padding: 24px;
+  border-radius: 12px;
 }
 
 .testimonial-box {
@@ -144,16 +149,22 @@ img {
   margin-bottom: 24px;
   font-size: 18px;
   line-height: 1.7;
+  color: #e6fcf5;
 }
-
+.testimonial-author {
+  color: #c3fae8;
+}
 /* CHAIRS */
 .chair-box {
-  padding: 24px;
+  padding: 32px;
 }
 .chair {
   box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.226);
+  border-radius: 12px;
 }
-
+.chair img {
+  border-radius: 12px 12px 0px 0px ;
+}
 h3 {
   margin-bottom: 24px;
   font-size: 20px;
@@ -161,7 +172,7 @@ h3 {
 
 .chair-details {
   list-style: none;
-  margin-bottom: 24px;
+  margin-bottom: 48px;
 }
 
 .chair-details li {
@@ -183,6 +194,7 @@ h3 {
 
 .chair-price {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   font-size: 20px;
 }
